# MAI-OOP-Lab3-2025

./: .gitignore  README.md
lab_3/: CMakeLists.txt  main.cpp
lab_3/include/: array.h  figure.h  hexagon.h  octagon.h  pentagon.h  point.h
lab_3/src/: array.cpp  figure.cpp  hexagon.cpp  octagon.cpp  pentagon.cpp  point.cpp
lab_3/test/: test03.cpp
